--- a/kdd2021.tex
+++ b/kdd2021.tex
@@ -477,6 +477,7 @@ We conducted a pilot study on a private event sequence data of a large European 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{kdd2021}
 
+\newpage
 \appendix
 
 \section{Batch generation} \label{app-sec-bg}
