Update on Overleaf.

--- a/kdd2021.tex
+++ b/kdd2021.tex
@@ -459,17 +459,17 @@ We've observed a significant increase in model performance (+ 2-10\% AUROC) afte
 \centering
 \caption{Organization transactions embeddings}
 \begin{tabular}{llll}
-  \toprule
-  & CoLES embeddings & Baseline & Baseline + CoLES embeddings \\
-  \midrule
-  Number of emploees in medium organization (SMAPE) &  & 409 & 365 \\
-  Number of emploees in small organization (SMAPE) &  & 237 & 213 \\
-  Mean salary in medium organization (SMAPE) &  & 278 & 260 \\
-  Mean salary in small organization (SMAPE) &  & 541 & 513 \\
-  Medical insurance lead generation (AUROC) & 0,85 & 0,71 & 0,85 \\
-  Credit Scoring lead generation (AUROC) & 788 & 749 & 786 \\
-  Credit Scoring for medium and small organizations (AUROC) & 0,71 & 0,73 & 0,77
-  \bottomrule
+\toprule
+& CoLES embeddings & Baseline & Baseline + CoLES embeddings \\
+\midrule
+Number of emploees in medium organization (SMAPE) &  & 409 & 365 \\
+Number of emploees in small organization (SMAPE) &  & 237 & 213 \\
+Mean salary in medium organization (SMAPE) &  & 278 & 260 \\
+Mean salary in small organization (SMAPE) &  & 541 & 513 \\
+Medical insurance lead generation (AUROC) & 0,85 & 0,71 & 0,85 \\
+Credit Scoring lead generation (AUROC) & 788 & 749 & 786 \\
+Credit Scoring for medium and small organizations (AUROC) & 0,71 & 0,73 & 0,77 \\
+\bottomrule
 \end{tabular}
 \small{Baseline includes both transactional and non-transactional features}
 \end{table}
@@ -479,17 +479,17 @@ We've observed a significant increase in model performance (+ 2-10\% AUROC) afte
 \centering
 \caption{Person transactions embeddings}
 \begin{tabular}{llll}
-  \toprule
-  & CoLES embeddings & Baseline & Baseline + CoLES embeddings \\
-  \midrule
-  Number of emploees in medium organization (SMAPE) &  & 409 & 365 \\
-  Number of emploees in small organization (SMAPE) &  & 237 & 213 \\
-  Mean salary in medium organization (SMAPE) &  & 278 & 260 \\
-  Mean salary in small organization (SMAPE) &  & 541 & 513 \\
-  Medical insurance lead generation (AUROC) & 0,85 & 0,71 & 0,85 \\
-  Credit Scoring lead generation (AUROC) & 788 & 749 & 786 \\
-  Credit Scoring for medium and small organizations (AUROC) & 0,71 & 0,73 & 0,77
-  \bottomrule
+\toprule
+& CoLES embeddings & Baseline & Baseline + CoLES embeddings \\
+\midrule
+Number of emploees in medium organization (SMAPE) &  & 409 & 365 \\
+Number of emploees in small organization (SMAPE) &  & 237 & 213 \\
+Mean salary in medium organization (SMAPE) &  & 278 & 260 \\
+Mean salary in small organization (SMAPE) &  & 541 & 513 \\
+Medical insurance lead generation (AUROC) & 0,85 & 0,71 & 0,85 \\
+Credit Scoring lead generation (AUROC) & 788 & 749 & 786 \\
+Credit Scoring for medium and small organizations (AUROC) & 0,71 & 0,73 & 0,77 \\
+\bottomrule
 \end{tabular}
 \small{Baseline includes both transactional and non-transactional features}
 \end{table}
