Update on Overleaf.

--- a/kdd2021.bib
+++ b/kdd2021.bib
@@ -159,12 +159,11 @@
   volume={abs/1802.05365}
 }
 
-@article{Mikolov2013EfficientEO,
+@inproceedings{Mikolov2013EfficientEO,
   title={Efficient Estimation of Word Representations in Vector Space},
-  author={Tomas Mikolov and Kai Chen and Gregory S. Corrado and Jeffrey Dean},
-  journal={CoRR},
-  year={2013},
-  volume={abs/1301.3781}
+  author={Tomas Mikolov and Kai Chen and G. S. Corrado and J. Dean},
+  booktitle={ICLR},
+  year={2013}
 }
 
 @article{Lwe2019GreedyIF,
